blocks/header.css
.header {
  min-height: 74px;
  padding-top: 45px;
  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
}

.header__logo {
  width: 173px;
  height: 33px;
  padding-bottom: 41px;
}

@media screen and (max-width: 633px) {
  .header {
    padding-top: 28px;
  }
  .header__logo {
    width: 126px;
    height: 24px;
    padding-bottom: 32px;
  }
}

@media screen and (max-width: 320px) {
  .header__logo {
    padding-left: 27px;
  }
}

